# Hidden_Gems

./: .env.sample  AI_Financial_Model_Prototype.ipynb  Book1.xlsx  NVDIA_scrape.py  README.md  example.csv  finBert_analysis_SEC.py  finBert_news.py  financials.csv  financials_2024-10-17.csv  financials_2025-10-17.csv  merged_combined.csv  merged_dataset.csv  merged_dataset_2024-10-17.csv  merged_dataset_2025-10-17.csv  midcap_scrape.py  midcaps.csv  midcaps_2024-10-17.csv  midcaps_2025-10-17.csv  model_config.json  pyproject.toml  requirements.txt  scrape_pipeline.py  sentiment_analysis.py  sentiment_scrape.py  train_and_save_xgboost.py  train_xgboost.py  xgb_multiyear_prototype.py  xgb_prototype.py  xgboost_demo.py  xgboost_model.pkl
Backend/: app.py
SENTIMENT/aal/: AAL_10-K_ITEM 1.  BUSINESS.txt  AAL_10-K_ITEM 1A. RISK FACTORS.txt  AAL_10-K_ITEM 2.  PROPERTIES.txt  AAL_10-K_Item 1. Business.txt  AAL_10-K_Item 1A. Risk Factors.txt  aal_10-K_ITEM 3  LEGAL_PROCEEDINGS.txt  aal_10-K_Item_2_Properties.txt  aal_10-K_Item 1A_Risk_Factors.txt  aal_10-K_Item 1_Business.txt  aal_10-K_clean.txt  (+1 more)
backend/: agents.py  config.env  main.py  requirements.txt
data/: csv_generator.py  example.csv
frontend/: App.js  index.html
hidden-gems-frontend/: package-lock.json  package.json
nvidia_financials/: nvidia_balance.csv  nvidia_income.csv  nvidia_ratios.csv
scripts/: generate_labels.py  midcap_scrape.py  run_scrape.py  run_server.py  run_train.py  smoke_imports.py
tests/: NVDIA_scrape.py  test_smoke_scrape.py  train_xgboost.py  xgb_multiyear_prototype.py  xgb_prototype.py
(+3815 files in other folders)
